2014-01-10  Richard Frith-Macdonald <rfm@gnu.org>

	* GNUmakefile.in: Implement Sebastien's suggestions for make targets
	to build/install documentation with or without gnustep-make as a
	convenience for packagers.
	* Documentation/GNUmakefile: Use uninstalled gnustep-make from
	enclosing directory if available ... based on idea by Niels and
	code/comments by Markus.

2014-01-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Instance/Documentation/texi.make:
	Revert change from 2009-09-19 since texi2html now seems to be
	behaving as expected.  However, attempt to move any html files
	from the subdirectory in case we are using a version which still
	puts them there.

2014-01-06  Richard Frith-Macdonald <rfm@gnu.org>

	* INSTALL:
	* Documentation/GNUmakefile:
	Make it clearer (ie very explicit) that you need to install
	gnustep-make in order to install documentation.

2013-12-25 Fred Kiefer <FredKiefer@gmx.de>

	* Instance/rules.make: Add detection for different forms of
	the Info.plist.
	* Instance/application.make,
	* Instance/bundle.make,
	* Instance/framework.make,
	* Instance/gswapp.make,
	* Instance/palette.make,
	* Instance/service.make: Use GNUSTEP_PLIST_DEPEND directly.

2013-12-25 Fred Kiefer <FredKiefer@gmx.de>

	* config.make.in: Use the correct CXX compiler. Fixes bug #36722.
	Patch by Johannes Lundberg <johannes@brilliantservice.co.jp>.

2013-12-24  Richard Frith-Macdonald <rfm@gnu.org>

        * Version:
	* Documentation/news.texi:
	* Documentation/releasenotes.texi:
	Make minor bugfix release ... Version 2.6.6
	Update release notes/documentation

2013-12-12  Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* Master/tool.make: on clean only delete the subdirectory that gets
	created when calling make.

2013-12-07  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* target.make: Add -keep_private_externs to linker flags on OS X
	when merging the object files of a subproject for compatibility
	with other platforms.

2013-12-06  Adam Fedor  <fedor@gnu.org>
