@@ -162,6 +162,7 @@ INSTALL		= @HOST_INSTALL@
 INSTALL_PROGRAM	= @INSTALL_PROGRAM@
 INSTALL_DATA	= @INSTALL_DATA@
 TAR		= @TAR@
+MAKE		= @GNUMAKE@
 MKDIRS		= $(GNUSTEP_MAKEFILES)/mkinstalldirs
 
 LATEX2HTML      = @LATEX2HTML@
